fixed alignement

--- a/src/css/ProgramsComponents/programComponents.module.css
+++ b/src/css/ProgramsComponents/programComponents.module.css
@@ -2,7 +2,7 @@
 @import url('../fonts.css');
 
 .form {
-    margin: 1rem;
+    /* margin: 1rem; */
     float: left;
 }
 
@@ -37,7 +37,6 @@
 }
 
 
-
 .filterHeader {
     font-weight: 400;
     padding-bottom: 10px;
@@ -46,23 +45,8 @@
 
 .outerContainer {
     margin: 50px 0;
-    justify-content: center;
+    justify-content: flex-start;
 }
-
-.selectSectionLeft {
-    float: right !important;
-    margin: 0 30px 0 !important;
-    max-width: 430px !important;
-
-}
-.selectSectionRight {
-    /* width: 400px !important; */
-    float: left !important;
-    margin: 0 30px 0 !important;
-    max-width: 430px !important;
-}
-
-
 
 
 /* FilterArea.jsx */
@@ -73,16 +57,14 @@
 
 /* FilteredProgramBoxes.jsx */
 
-.programBoxLeft {
-    float: left;
-    margin: 30px 50px 30px 0 !important;
-    
+.boxContainer {
+    justify-content: space-between;
 }
 
-.programBoxRight {
-    float: left;
-    margin: 30px 0 30px 50px !important;
+.programBox {
+    margin: 30px 0 !important;
 }
+
 
 
 
@@ -101,9 +83,7 @@
 }
 
 .programInfoBoxPaper {
-    /* margin: 30px; */
     padding: 30px 40px 30px;
-    width: 480px;
     min-height: 430px;
     border: solid;
     border-color: #dedede;
